--- a/samples/audio/convolution-effects.html
+++ b/samples/audio/convolution-effects.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2009, Google Inc.
+Copyright 2010, Google Inc.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
@@ -39,11 +39,8 @@ Real-time Convolution Effects
 </title>
 
 
-<!-- JQuery stuff -->
+<!-- Slider stuff -->
 <link type="text/css" href="http://jqueryui.com/latest/themes/base/ui.all.css" rel="stylesheet" />
-<script type="text/javascript" src="http://jqueryui.com/latest/jquery-1.3.2.js"></script>
-<script type="text/javascript" src="http://jqueryui.com/latest/ui/ui.core.js"></script>
-<script type="text/javascript" src="http://jqueryui.com/latest/ui/ui.slider.js"></script>
 <script type="text/javascript" src="lib/events.js"></script>
 <style type="text/css">
   #slider { margin: 10px; }
@@ -60,7 +57,12 @@ Real-time Convolution Effects
 window.onload = init;
 
 var xaudio = 0;
+var context = 0;
 var source = 0;
+var convolver = 0;
+var mixer = 0;
+var mixerInput1 = 0;
+var mixerInput2 = 0;
 
 // Source buffers
 var humanVoice = 0;
@@ -115,74 +117,85 @@ var responseOffset = 4;
 var bufferLoaderList = 0;
 
 function BufferLoader(url, mixToMono) {
-  this.url = url;
-  this.buffer = 0;
-  this.mixToMono = mixToMono;
+    this.url = url;
+    this.buffer = 0;
+    this.mixToMono = mixToMono;
 
-  this.load();
+    this.load();
 }
 
 BufferLoader.prototype.load = function() {
-  // Load asynchronously
-  var request = xaudio.createAudioRequest(this.url, this.mixToMono);
+    // Load asynchronously
+    var request = xaudio.createAudioRequest(this.url, this.mixToMono);
 
-  var bufferLoader = this;
+    var bufferLoader = this;
 
-  request.onload = function() {
-    bufferLoader.buffer = request.buffer;
-    finishLoading();
-  }
-  
-  request.send();
+    request.onload = function() {
+        bufferLoader.buffer = request.buffer;
+        finishLoading();
+    }
+
+    request.send();
 }
 
 function highlightElement(object) {
-  if (hilightedElement) hilightedElement.style.backgroundColor = "white";
-  hilightedElement = object;
-  
-  object.style.backgroundColor = "green";
+    if (hilightedElement) hilightedElement.style.backgroundColor = "white";
+    hilightedElement = object;
+
+    object.style.backgroundColor = "green";
 }
 
 function loadBufferAndPlay(bufferIndex, responseIndex, mainGain, reverbGain) {
-  source.buffer = bufferLoaderList[bufferIndex].buffer;
-  xaudio.impulseResponseBuffer = bufferLoaderList[responseOffset + responseIndex].buffer;
+    source.buffer = bufferLoaderList[bufferIndex].buffer;
+    convolver.buffer = bufferLoaderList[responseOffset + responseIndex].buffer;
 
-  source.mainGain = mainGain;
-  source.sendGain = reverbGain;
-  source.gainSendInfluence = 0.0;
+    mixerInput1.gain.value = mainGain;
+    mixerInput2.gain.value = reverbGain;
 
-  source.play(0);
+    source.noteOn(0);
 }
 
 function finishLoading() {
-  loadCount++;
-  if (loadCount != fileCount) {
-    // not done yet - load next file
-    bufferLoaderList[loadCount] = new BufferLoader(fileList[loadCount]);  
-    return;
-  }
-  
-  // first, get rid of loading animation
-  var loading = document.getElementById("loading");
-  loading.innerHTML = "";
-  
-  xaudio.listener.gain = 1.0;
-  loadBufferAndPlay(0, 0, 0.0, 0.5);
+    loadCount++;
+    if (loadCount != fileCount) {
+        // not done yet - load next file
+        bufferLoaderList[loadCount] = new BufferLoader(fileList[loadCount]);  
+        return;
+    }
+
+    // first, get rid of loading animation
+    var loading = document.getElementById("loading");
+    loading.innerHTML = "";
+
+    loadBufferAndPlay(0, 0, 0.0, 0.5);
 }
 
 function init() {
-  xaudio = document.getElementById('myAudioTag');
-  
-  source = xaudio.addSource();
-  source.playbackPitch = 1.0;  // should be in cents!!!!
-	source.sendGain = 3.0;
-  source.looping = true;
-  source.panningModel = 0;  // pass-through panning
-  
-  bufferLoaderList = new Array(fileCount);
+    xaudio = document.getElementById('myAudioTag');
+    context = xaudio.context;
+    convolver = context.createConvolver(source);
+    source = context.createBufferSource();
+    mixer = context.createMixer();
 
-  // start loading
-  bufferLoaderList[0] = new BufferLoader(fileList[0]);  
+    mixerInput1 = mixer.createInput();
+    mixerInput2 = mixer.createInput();
+
+    mixerInput1.gain.value = 1.0;
+    mixerInput2.gain.value = 2.0;
+
+    // Connect up processing graph
+    source.connect(mixerInput1);  
+    source.connect(convolver);
+    convolver.connect(mixerInput2);
+    mixer.connect(context.output);
+
+    // source.playbackPitch = 1.0;  // should be in cents!!!!
+    source.looping = true;
+
+    bufferLoaderList = new Array(fileCount);
+
+    // start loading
+    bufferLoaderList[0] = new BufferLoader(fileList[0]);  
 }
 
 </script>
@@ -409,8 +422,6 @@ Guitar Chords (real warehouse)
 </div>
 
 -->
-
-
 
 </body>
 </html>
